@@ -8,7 +8,7 @@ setup(name='bzr-rebase',
       version='0.4',
       url='http://bazaar-vcs.org/Rebase',
       download_url='http://bazaar-vcs.org/Rebase',
-      license='GPL',
+      license='GPLv3 or later',
       author='Jelmer Vernooij',
       author_email='jelmer@samba.org',
       long_description="""
